<?xml version="1.0" encoding="utf-8"?>
<resources>
	
    <!-- Application Name -->
    <string name="app_name">Your App Name</string> <!--Important -->
    <string name="title_activity_splash_screen">Your App Name</string> <!--Important -->
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_error">Error</string>
    <string name="title_activity_message">Message</string>

    <!-- ACTION BAR -->
    <string name="action_share">Share</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_home">Home</string>
    <string name="action_contact">Contact</string>
    <string name="action_close">Close</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>

    <!-- Others -->
    <string name="logo">logo</string>
    <string name="content">content</string>
    <string name="username">Username</string>
    <string name="mobilenumber">Mobile Number</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="des">content</string>
    <string name="hello_world">Hello world!</string>
    
    <!-- Spinner Gender -->
    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

</resources>
