<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >

    <item android:id="@+id/share"
        android:icon="@drawable/ic_action_share"
        android:title="@string/action_share"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"></item>

    <item android:id="@+id/refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"></item>

    <item android:id="@+id/home"
        android:icon="@drawable/ic_action_dock"
        android:title="@string/action_home"></item>

    <item android:id="@+id/contact"
        android:icon="@drawable/ic_action_email"
        android:title="@string/action_contact"></item>

    <item android:id="@+id/about"
        android:icon="@drawable/ic_action_about"
        android:title="@string/action_about"></item>

    <item android:id="@+id/close"
        android:icon="@drawable/ic_action_cancel"
        android:title="@string/action_close"></item>

</menu>
